'参数校验'
